# SudokuSolver

./: .gitignore  CMakeLists.txt  LICENSE
data/UML/:  Activity_Diagram.drawio  Sequence_Diagram.drawio
data/input/: easy.txt  random.txt
include/: importer.h  puzzle.h  variables.h
src/: importer.cpp  main.cpp  puzzle.cpp
